# e2eeFTP

./: .gitignore  CNAME  README.md  authorized_clients.pub  client.py  client_cli.py  client_id.key  custom_server.py  generate_keys.py  index.html  known_server.pub  main.py  pyproject.toml  requirements.txt  server.py  server_id.key
e2eeFTP/: __init__.py  __main__.py
e2eeFTP/auth/: __init__.py  e2ee.py  key.py
e2eeFTP/client/: __init__.py  __main__.py  cli.py  client.py
e2eeFTP/server/: __init__.py  server.py
pyproto/: __init__.py
pyproto/auth/: e2ee.py
pyproto/client/: client.py
pyproto/server/: server.py
